--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.0",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "uuid": "^8.3.2"
   },
   "license": "MIT"
 }
